# light_garbage_collector

./: .editorconfig  .gitignore  CMakeLists.txt  files.py  incremental_mark_sweep_collector.cpp  incremental_mark_sweep_collector.hpp  mark_sweep_collector.cpp  mark_sweep_collector.hpp  meson.build
include/: context.h  incremental_mark_sweep_collector.h  mark_sweep_collector.h
src/: incremental_mark_sweep_collector.cc  mark_sweep_collector.cc
